tests/e2e/regex_division.error
Error: syntax error in story at line 1, column 5

1|    c = a / b
          ^

E0101: Variable `a` has not been defined.
