tests/e2e/regex_division.story
c = a / b
d = b / a
